solved problem 58